--- a/src/main/resources/META-INF/rewrite/eslint-plugin-react.yml
+++ b/src/main/resources/META-INF/rewrite/eslint-plugin-react.yml
@@ -19,6 +19,8 @@ displayName: Enforce consistent usage of destructuring assignment of props, stat
 description: |-
   Enforce consistent usage of destructuring assignment of props, state, and context
   See rule details for [react/destructuring-assignment](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/destructuring-assignment.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -43,6 +45,8 @@ displayName: Enforce a specific function type for function components
 description: |-
   Enforce a specific function type for function components
   See rule details for [react/function-component-definition](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/function-component-definition.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -67,6 +71,8 @@ displayName: Enforce boolean attributes notation in JSX
 description: |-
   Enforce boolean attributes notation in JSX
   See rule details for [react/jsx-boolean-value](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-boolean-value.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -91,6 +97,8 @@ displayName: Enforce closing bracket location in JSX
 description: |-
   Enforce closing bracket location in JSX
   See rule details for [react/jsx-closing-bracket-location](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-closing-bracket-location.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -115,6 +123,8 @@ displayName: Enforce closing tag location for multiline JSX
 description: |-
   Enforce closing tag location for multiline JSX
   See rule details for [react/jsx-closing-tag-location](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-closing-tag-location.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -139,6 +149,8 @@ displayName: Disallow unnecessary JSX expressions when literals alone are suffic
 description: |-
   Disallow unnecessary JSX expressions when literals alone are sufficient or enforce JSX expressions on literals in JSX children or attributes
   See rule details for [react/jsx-curly-brace-presence](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-curly-brace-presence.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -163,6 +175,8 @@ displayName: Enforce consistent linebreaks in curly braces in JSX attributes and
 description: |-
   Enforce consistent linebreaks in curly braces in JSX attributes and expressions
   See rule details for [react/jsx-curly-newline](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-curly-newline.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -187,6 +201,8 @@ displayName: Enforce or disallow spaces inside of curly braces in JSX attributes
 description: |-
   Enforce or disallow spaces inside of curly braces in JSX attributes and expressions
   See rule details for [react/jsx-curly-spacing](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-curly-spacing.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -211,6 +227,8 @@ displayName: Enforce or disallow spaces around equal signs in JSX attributes
 description: |-
   Enforce or disallow spaces around equal signs in JSX attributes
   See rule details for [react/jsx-equals-spacing](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-equals-spacing.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -235,6 +253,8 @@ displayName: Enforce proper position of the first property in JSX
 description: |-
   Enforce proper position of the first property in JSX
   See rule details for [react/jsx-first-prop-new-line](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-first-prop-new-line.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -259,6 +279,8 @@ displayName: Enforce shorthand or standard form for React fragments
 description: |-
   Enforce shorthand or standard form for React fragments
   See rule details for [react/jsx-fragments](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-fragments.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -283,6 +305,8 @@ displayName: Enforce JSX indentation
 description: |-
   Enforce JSX indentation
   See rule details for [react/jsx-indent](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-indent.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -307,6 +331,8 @@ displayName: Enforce props indentation in JSX
 description: |-
   Enforce props indentation in JSX
   See rule details for [react/jsx-indent-props](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-indent-props.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -331,6 +357,8 @@ displayName: Enforce maximum of props on a single line in JSX
 description: |-
   Enforce maximum of props on a single line in JSX
   See rule details for [react/jsx-max-props-per-line](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-max-props-per-line.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -355,6 +383,8 @@ displayName: Require or prevent a new line after jsx elements and expressions
 description: |-
   Require or prevent a new line after jsx elements and expressions
   See rule details for [react/jsx-newline](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-newline.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -379,6 +409,8 @@ displayName: Disallow problematic leaked values from being rendered
 description: |-
   Disallow problematic leaked values from being rendered
   See rule details for [react/jsx-no-leaked-render](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-no-leaked-render.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -403,6 +435,8 @@ displayName: Disallow target="_blank" attribute without rel="noreferrer"
 description: |-
   Disallow target="_blank" attribute without rel="noreferrer"
   See rule details for [react/jsx-no-target-blank](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-no-target-blank.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -427,6 +461,8 @@ displayName: Disallow unnecessary fragments
 description: |-
   Disallow unnecessary fragments
   See rule details for [react/jsx-no-useless-fragment](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-no-useless-fragment.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -451,6 +487,8 @@ displayName: Require one JSX element per line
 description: |-
   Require one JSX element per line
   See rule details for [react/jsx-one-expression-per-line](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-one-expression-per-line.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -475,6 +513,8 @@ displayName: Disallow multiple spaces between inline JSX props
 description: |-
   Disallow multiple spaces between inline JSX props
   See rule details for [react/jsx-props-no-multi-spaces](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-props-no-multi-spaces.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -499,6 +539,8 @@ displayName: Enforce props alphabetical sorting
 description: |-
   Enforce props alphabetical sorting
   See rule details for [react/jsx-sort-props](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-sort-props.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -523,6 +565,8 @@ displayName: Enforce spacing before closing bracket in JSX
 description: |-
   Enforce spacing before closing bracket in JSX
   See rule details for [react/jsx-space-before-closing](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-space-before-closing.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -547,6 +591,8 @@ displayName: Enforce whitespace in and around the JSX opening and closing bracke
 description: |-
   Enforce whitespace in and around the JSX opening and closing brackets
   See rule details for [react/jsx-tag-spacing](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-tag-spacing.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -571,6 +617,8 @@ displayName: Disallow missing parentheses around multiline JSX
 description: |-
   Disallow missing parentheses around multiline JSX
   See rule details for [react/jsx-wrap-multilines](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/jsx-wrap-multilines.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -595,6 +643,8 @@ displayName: Lifecycle methods should be methods on the prototype, not class fie
 description: |-
   Lifecycle methods should be methods on the prototype, not class fields
   See rule details for [react/no-arrow-function-lifecycle](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/no-arrow-function-lifecycle.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -619,6 +669,8 @@ displayName: Disallow usage of unknown DOM property
 description: |-
   Disallow usage of unknown DOM property
   See rule details for [react/no-unknown-property](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/no-unknown-property.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -643,6 +695,8 @@ displayName: Enforce that props are read-only
 description: |-
   Enforce that props are read-only
   See rule details for [react/prefer-read-only-props](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/prefer-read-only-props.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -667,6 +721,8 @@ displayName: Disallow extra closing tags for components without children
 description: |-
   Disallow extra closing tags for components without children
   See rule details for [react/self-closing-comp](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/self-closing-comp.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -691,6 +747,8 @@ displayName: Enforce propTypes declarations alphabetical sorting
 description: |-
   Enforce propTypes declarations alphabetical sorting
   See rule details for [react/sort-prop-types](https://github.com/jsx-eslint/eslint-plugin-react/blob/HEAD/docs/rules/sort-prop-types.md).
+preconditions:
+  - org.openrewrite.Singleton
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
